# gcn-classic-to-json

./: .flake8  Dockerfile  README.md  pyproject.toml  test.py
.github/workflows/: build.yml
gcn_classic_to_json/: cli.py  kafka.py  metrics.py  notices.py
gcn_classic_to_json/notices/: __init__.py
gcn_classic_to_json/notices/SWIFT_ACTUAL_POINTDIR/: __init__.py  example.json
gcn_classic_to_json/notices/SWIFT_BAT_GRB_LC/: example.json
gcn_classic_to_json/notices/SWIFT_BAT_GRB_POS_ACK/: __init__.py  example copy.json  example.json
gcn_classic_to_json/notices/SWIFT_BAT_GRB_POS_TEST/: example.json
gcn_classic_to_json/notices/SWIFT_BAT_QL_POS/: example.json
gcn_classic_to_json/notices/SWIFT_BAT_SCALEDMAP/: example.json
gcn_classic_to_json/notices/SWIFT_BAT_TRANS/: __init__.py  example.json
gcn_classic_to_json/notices/SWIFT_POINTDIR/: example.json
gcn_classic_to_json/notices/SWIFT_SC_SLEW/: example.json
gcn_classic_to_json/notices/SWIFT_TOO_SC_SLEW/: example.json
gcn_classic_to_json/notices/SWIFT_UVOT_DBURST_PROC/: example.json
gcn_classic_to_json/notices/SWIFT_UVOT_FCHART/: example.json
gcn_classic_to_json/notices/SWIFT_UVOT_FCHART_PROC/: __init__.py
gcn_classic_to_json/notices/SWIFT_UVOT_POS/: example.json
gcn_classic_to_json/notices/SWIFT_XRT_CENTROID/: example.json
gcn_classic_to_json/notices/SWIFT_XRT_IMAGE_PROC/: __init__.py  example.json
gcn_classic_to_json/notices/SWIFT_XRT_LC/: example.json
gcn_classic_to_json/test/: __init__.py  test_notices.py
gcn_monitor/: cli.py  kafka.py  metrics.py
(+3 files in other folders)
